<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>Admiralty</groupId>
  <artifactId>Admiralty</artifactId>
  <version>1.0.5-SNAPSHOT</version>
  <properties>
    <junit.jupiter.version>5.12.2</junit.jupiter.version>
    <rewrite-maven-plugin.version>6.46.1</rewrite-maven-plugin.version>
    <rewrite-migrate-java.version>3.42.1</rewrite-migrate-java.version>
  </properties>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>test</testSourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>test/resources</directory>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <release>25</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
        <configuration>
          <systemPropertyVariables>
            <java.awt.headless>true</java.awt.headless>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>${rewrite-maven-plugin.version}</version>
        <configuration>
          <activeRecipes>
            <recipe>org.openrewrite.java.migrate.UpgradeToJava25</recipe>
          </activeRecipes>
          <exportDatatables>true</exportDatatables>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>${rewrite-migrate-java.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	<dependency>
		<groupId>jakarta.xml.bind</groupId>
		<artifactId>jakarta.xml.bind-api</artifactId>
		<version>2.3.3</version>
	</dependency>
	<dependency>
		<groupId>org.glassfish.jaxb</groupId>
		<artifactId>jaxb-runtime</artifactId>
		<version>2.3.9</version>
	</dependency>
	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter</artifactId>
		<version>${junit.jupiter.version}</version>
		<scope>test</scope>
	</dependency>
  	<dependency>
  		<groupId>org.apache.commons</groupId>
  		<artifactId>commons-csv</artifactId>
  	</dependency>
  	<dependency>
  		<groupId>org.swinglabs.swingx</groupId>
  		<artifactId>swingx-all</artifactId>
  	</dependency>
  	<dependency>
  		<groupId>com.github.rjeschke</groupId>
  		<artifactId>txtmark</artifactId>
  		<version>0.13</version>
  	</dependency>
  </dependencies>
  <dependencyManagement>
  	<dependencies>
  		<dependency>
  			<groupId>commons-codec</groupId>
  			<artifactId>commons-codec</artifactId>
			<version>1.17.2</version>
  		</dependency>
  		<dependency>
  			<groupId>org.apache.commons</groupId>
  			<artifactId>commons-csv</artifactId>
  			<version>1.3</version>
  		</dependency>
  		<dependency>
  			<groupId>org.swinglabs.swingx</groupId>
  			<artifactId>swingx-all</artifactId>
  			<version>1.6.4</version>
  		</dependency>
  	</dependencies>
  </dependencyManagement>
</project>
